==> robot-doc/edfu_softrf_v2/lib/platform/CH32.cpp <==
#include <SPI.h>
#include <Wire.h>
#include <Adafruit_TinyUSB.h>
#include "../system/SoC.h"
#include "../driver/RF.h"
#include "../driver/EEPROM.h"
#include "../driver/LED.h"
#include "../driver/OLED.h"
#include "../driver/Baro.h"
#include "../driver/Sound.h"
#include "../driver/Battery.h"
#include "../protocol/data/NMEA.h"
#include "../protocol/data/GDL90.h"
#include "../protocol/data/D1090.h"
#include <Adafruit_SPIFlash.h>
#include "uCDB.hpp"

static void CH32_setup()
{
#if SOC_GPIO_RADIO_LED_TX != SOC_UNUSED_PIN
  pinMode(SOC_GPIO_RADIO_LED_TX, OUTPUT);
  digitalWrite(SOC_GPIO_RADIO_LED_TX, ! LED_STATE_ON);
#endif /* SOC_GPIO_RADIO_LED_TX */
#if SOC_GPIO_RADIO_LED_RX != SOC_UNUSED_PIN
  pinMode(SOC_GPIO_RADIO_LED_RX, OUTPUT);
  digitalWrite(SOC_GPIO_RADIO_LED_RX, ! LED_STATE_ON);
#endif /* SOC_GPIO_RADIO_LED_RX */

  SerialOutput.setRx(SOC_GPIO_PIN_CONS_RX);
  SerialOutput.setTx(SOC_GPIO_PIN_CONS_TX);
  SerialOutput.begin(SERIAL_OUT_BR, SERIAL_OUT_BITS);

  Serial_GNSS_In.setRx(SOC_GPIO_PIN_GNSS_RX);
  Serial_GNSS_In.setTx(SOC_GPIO_PIN_GNSS_TX);

#if !defined(USE_SOFTSPI)
  RadioSPI.setMISO(SOC_GPIO_PIN_MISO);
  RadioSPI.setMOSI(SOC_GPIO_PIN_MOSI);
  RadioSPI.setSCLK(SOC_GPIO_PIN_SCK);
#endif /* USE_SOFTSPI */

  Wire.setSCL(SOC_GPIO_PIN_SCL);
  Wire.setSDA(SOC_GPIO_PIN_SDA);

#if defined(USE_TINYUSB)
  USBDevice.setManufacturerDescriptor(CH32_Device_Manufacturer);
  USBDevice.setProductDescriptor(CH32_Device_Model);
  USBDevice.setDeviceVersion(CH32_Device_Version);
#endif /* USE_TINYUSB */

  Wire.begin();
  Wire.beginTransmission(FT24C64_ADDRESS);
  CH32_has_eeprom = (Wire.endTransmission() == 0);
  Wire.end();

  if (CH32_has_eeprom) {
    CH32_board = CH32_YD_V307VCT6;
  }

  /* (Q)SPI flash init */
  Adafruit_FlashTransport_SPI *ft = NULL;

  switch (CH32_board)
  {
    case CH32_YD_V307VCT6:
      pin_function(SOC_GPIO_YD_LED_BLUE,
                   CH_PIN_DATA(CH_MODE_OUTPUT_50MHz, CH_CNF_OUTPUT_PP, 0, 0));
      digitalWriteFast(SOC_GPIO_YD_LED_BLUE, HIGH);

      possible_devices[W25Q32JV_INDEX].supports_qspi        = false;
      possible_devices[W25Q32JV_INDEX].supports_qspi_writes = false;

#if !defined(USE_SOFTSPI)
      FlashSPI.setMISO(SOC_GPIO_YD_FL_MISO);
      FlashSPI.setMOSI(SOC_GPIO_YD_FL_MOSI);
      FlashSPI.setSCLK(SOC_GPIO_YD_FL_CLK);
#endif /* USE_SOFTSPI */

      ft = new Adafruit_FlashTransport_SPI(SOC_GPIO_YD_FL_SS, &FlashSPI);

#if defined(ENABLE_RECORDER)
      {
        int uSD_SS_pin = SOC_GPIO_YD_SD_D3;

#if !defined(USE_SOFTSPI) && SPI_DRIVER_SELECT != 2
        uSD_SPI.setMISO(SOC_GPIO_YD_SD_D0);
        uSD_SPI.setMOSI(SOC_GPIO_YD_SD_CMD);
        uSD_SPI.setSCLK(SOC_GPIO_YD_SD_CLK);
#endif /* USE_SOFTSPI */

        pinMode(uSD_SS_pin, OUTPUT);
        digitalWrite(uSD_SS_pin, HIGH);

        uSD_is_attached = uSD.cardBegin(SD_CONFIG);
      }
#endif /* ENABLE_RECORDER */
      break;

    case CH32_WCH_V307V_R1:
    default:
      break;
  }

  if (ft != NULL) {
    SPIFlash = new Adafruit_SPIFlash(ft);
    CH32_has_spiflash = SPIFlash->begin(possible_devices,
                                        EXTERNAL_FLASH_DEVICE_COUNT);
  }

  hw_info.storage = CH32_has_spiflash ? STORAGE_FLASH : STORAGE_NONE;

#if defined(ENABLE_RECORDER)
  if (uSD_is_attached && uSD.card()->cardSize() > 0) {
    hw_info.storage = (hw_info.storage == STORAGE_FLASH) ?
                      STORAGE_FLASH_AND_CARD : STORAGE_CARD;
  }
#endif /* ENABLE_RECORDER */

  if (CH32_has_spiflash) {
    spiflash_id = SPIFlash->getJEDECID();

#if defined(USE_TINYUSB)
    // Set disk vendor id, product id and revision with string up to 8, 16, 4 characters respectively
    usb_msc.setID(CH32_Device_Manufacturer, "External Flash", "1.0");

    // Set callback
    usb_msc.setReadWriteCallback(CH32_msc_read_cb,
                                 CH32_msc_write_cb,
                                 CH32_msc_flush_cb);

    // Set disk size, block size should be 512 regardless of spi flash page size
    usb_msc.setCapacity(SPIFlash->size()/512, 512);

    // MSC is ready for read/write
    usb_msc.setUnitReady(true);

    usb_msc.begin();
#endif /* USE_TINYUSB */

    FATFS_is_mounted = fatfs.begin(SPIFlash);
  }

#if defined(USE_RADIOLIB)
  lmic_pins.dio[0] = SOC_GPIO_PIN_DIO1;
#endif /* USE_RADIOLIB */

  Serial.begin(SERIAL_OUT_BR, SERIAL_OUT_BITS);

#if defined(USE_TINYUSB) && defined(USBCON)
  for (int i=0; i < 40; i++) {if (Serial) break; else delay(100);}
#endif
}

static void CH32_loop()
{
#if SOC_GPIO_RADIO_LED_TX != SOC_UNUSED_PIN
  if (digitalRead(SOC_GPIO_RADIO_LED_TX) != LED_STATE_ON) {
    if (tx_packets_counter != prev_tx_packets_counter) {
      digitalWrite(SOC_GPIO_RADIO_LED_TX, LED_STATE_ON);
      prev_tx_packets_counter = tx_packets_counter;
      tx_led_time_marker = millis();
    }
  } else {
    if (millis() - tx_led_time_marker > LED_BLINK_TIME) {
      digitalWrite(SOC_GPIO_RADIO_LED_TX, ! LED_STATE_ON);
      prev_tx_packets_counter = tx_packets_counter;
    }
  }
#endif /* SOC_GPIO_RADIO_LED_TX */

#if SOC_GPIO_RADIO_LED_RX != SOC_UNUSED_PIN
  if (digitalRead(SOC_GPIO_RADIO_LED_RX) != LED_STATE_ON) {
    if (rx_packets_counter != prev_rx_packets_counter) {
      digitalWrite(SOC_GPIO_RADIO_LED_RX, LED_STATE_ON);
      prev_rx_packets_counter = rx_packets_counter;
      rx_led_time_marker = millis();
    }
  } else {
    if (millis() - rx_led_time_marker > LED_BLINK_TIME) {
      digitalWrite(SOC_GPIO_RADIO_LED_RX, ! LED_STATE_ON);
      prev_rx_packets_counter = rx_packets_counter;
    }
  }
#endif /* SOC_GPIO_RADIO_LED_RX */
}

static void CH32_reset()
{
  NVIC_SystemReset();
}

static uint32_t CH32_getChipId()
{
#if !defined(SOFTRF_ADDRESS)
  volatile uint32_t *ch32_uuid = ((volatile uint32_t *) 0x1FFFF7E8UL);

  /* Same method as STM32 OGN tracker does */
  uint32_t id = ch32_uuid[0] ^ ch32_uuid[1] ^ ch32_uuid[2];

  return DevID_Mapper(id);
#else
  return (SOFTRF_ADDRESS & 0xFFFFFFFFU );
#endif
}

static void* CH32_getResetInfoPtr()
{
  return (void *) &reset_info;
}

static String CH32_getResetInfo()
{
  switch (reset_info.reason)
  {
    default                       : return F("No reset information available");
  }
}

static String CH32_getResetReason()
{
  switch (reset_info.reason)
  {
    case REASON_DEFAULT_RST       : return F("DEFAULT");
    case REASON_WDT_RST           : return F("WDT");
    case REASON_EXCEPTION_RST     : return F("EXCEPTION");
    case REASON_SOFT_WDT_RST      : return F("SOFT_WDT");
    case REASON_SOFT_RESTART      : return F("SOFT_RESTART");
    case REASON_DEEP_SLEEP_AWAKE  : return F("DEEP_SLEEP_AWAKE");
    case REASON_EXT_SYS_RST       : return F("EXT_SYS");
    default                       : return F("NO_MEAN");
  }
}

static uint32_t CH32_getFreeHeap()
{
  char top;
  return &top - reinterpret_cast<char*>(_sbrk(0));
}

static float CH32_Battery_param(uint8_t param)
{
  float rval, voltage;

  switch (param)
  {
  case BATTERY_PARAM_THRESHOLD:
    rval = hw_info.model == SOFTRF_MODEL_ACADEMY ? BATTERY_THRESHOLD_LIPO   :
                                                   BATTERY_THRESHOLD_NIMHX2;
    break;

  case BATTERY_PARAM_CUTOFF:
    rval = hw_info.model == SOFTRF_MODEL_ACADEMY ? BATTERY_CUTOFF_LIPO      :
                                                   BATTERY_CUTOFF_NIMHX2;
    break;

  case BATTERY_PARAM_CHARGE:
    voltage = Battery_voltage();
    if (voltage < Battery_cutoff())
      return 0;

    if (voltage > 4.2)
      return 100;

    if (voltage < 3.6) {
      voltage -= 3.3;
      return (voltage * 100) / 3;
    }

    voltage -= 3.6;
    rval = 10 + (voltage * 150 );
    break;

  case BATTERY_PARAM_VOLTAGE:
  default:

    {
      uint16_t mV = 0;
#if SOC_GPIO_PIN_BATTERY != SOC_UNUSED_PIN
      mV = analogRead(SOC_GPIO_PIN_BATTERY);
#endif
      rval = mV * SOC_ADC_VOLTAGE_DIV / 1000.0;
    }
    break;
  }

  return rval;
}
